--- a/index.html
+++ b/index.html
@@ -162,8 +162,7 @@
     
         <div class="section-content">
             <center>
-            <h2>Resume</h2>
-            <a href=https://drive.google.com/file/d/1_Ux3mgM9aEOC1UoD1H6wJaLlq_ff0sby/view?usp=drivesdk target="_blank" class="download-button">Download CV</a>
+            <a href="resume.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
